--- a/client/src/app/templates/aide-financiere-form/app.af-form.html
+++ b/client/src/app/templates/aide-financiere-form/app.af-form.html
@@ -138,7 +138,7 @@
           <th mat-header-cell *matHeaderCellDef class="short"> UBR. </th>
           <td mat-cell *matCellDef="let element" class="short">
             <mat-form-field hideRequiredMarker=true floatLabel="auto">
-              <input matInput [(ngModel)]="element.ubr">
+              <input matInput [(ngModel)]="element.ubr" (ngModelChange)="fg_ventilation.updateValueAndValidity()">
             </mat-form-field>
           </td>
       </ng-container>
@@ -146,7 +146,7 @@
           <th mat-header-cell *matHeaderCellDef> Compte </th>
           <td mat-cell *matCellDef="let element">
             <mat-form-field hideRequiredMarker=true floatLabel="auto">
-              <input matInput [(ngModel)]="element.compte">
+              <input matInput [(ngModel)]="element.compte" (ngModelChange)="fg_ventilation.updateValueAndValidity()">
             </mat-form-field>
         </td>
       </ng-container>
@@ -154,7 +154,7 @@
           <th mat-header-cell *matHeaderCellDef> Unité administrative </th>
           <td mat-cell *matCellDef="let element">
             <mat-form-field hideRequiredMarker=true floatLabel="auto">
-              <input matInput [(ngModel)]="element.unite">
+              <input matInput [(ngModel)]="element.unite" (ngModelChange)="fg_ventilation.updateValueAndValidity()">
             </mat-form-field>
         </td>
       </ng-container>
