--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -26,8 +26,10 @@
   background: linear-gradient(#f3f3f3, #acacac);
   color: black;
   font-size: 14px;
-  height: 40px;
   justify-content: center;
+}
+.searchBar.mat-toolbar-single-row {
+  height: 50px !important;
 }
 
 .searchBarDiv {
