--- a/client/src/app/edition/edition.component.css
+++ b/client/src/app/edition/edition.component.css
@@ -86,4 +86,10 @@
       width:116%;
       margin:auto;
     }
+
+    
+        @page {
+            margin: 0.5cm;
+            }
+            
   }
