#17: Feedback de validation (AF)

--- a/client/src/app/templates/aide-financiere-form/app.af-form.html
+++ b/client/src/app/templates/aide-financiere-form/app.af-form.html
@@ -37,12 +37,14 @@
       <mat-form-field floatLabel="auto" class="short">
         <input matInput placeholder="Matricule (Employé)"
         formControlName="mat_enseignant">
-        <mat-hint *ngIf="fg_beneficiaire.hasError('matricules')">Au moins un matricule est obligatoire.</mat-hint>
       </mat-form-field>
       <mat-form-field floatLabel="auto" class="short">
         <input matInput placeholder="Matricule (Étudiant)"
         formControlName="mat_etudiant">
       </mat-form-field>
+      <p class="error_msg" *ngIf="fg_beneficiaire.get('mat_enseignant').touched && 
+                                  fg_beneficiaire.get('mat_etudiant').touched && 
+                                  fg_beneficiaire.hasError('matricules')">Au moins un matricule est obligatoire.</p>
     </form>
   </div>
 </div>
@@ -50,7 +52,7 @@
   <h6>CYCLE DE L'ÉTUDIANT</h6>
   <div class="section section-column" id="cycle">
     <form [formGroup]="fg_cycle">
-    <p>Identifier le cycle de l'étudiant(e):</p>
+    <p [ngClass]="{'error_msg': fg_cycle.invalid && fg_cycle.touched}">Identifier le cycle de l'étudiant(e):</p>
     <div class="section-row">
       <p class="checkbox-label">BACCALAURÉAT:</p>
       <mat-checkbox formControlName="bac" class="checkbox-field" color="primary">
@@ -95,17 +97,18 @@
     <p>Les versements sont faits aux quize jours, selon le cycle de la paie.</p>
     <p>PÉRIODE D'ENGAGEMENT:</p>
     <mat-form-field class="short">
-      <input matInput [matDatepicker]="debut" placeholder="Date de début"
+      <input matInput [matDatepicker]="debut" placeholder="Date de début" (click)="debut.open()"
       formControlName="date_debut">
       <mat-datepicker-toggle matSuffix [for]="debut"></mat-datepicker-toggle>
       <mat-datepicker #debut></mat-datepicker>
     </mat-form-field>
     <mat-form-field class="short">
-      <input matInput [matDatepicker]="fin" placeholder="Date de fin"
+      <input matInput [matDatepicker]="fin" placeholder="Date de fin" (click)="fin.open()"
       formControlName="date_fin">
       <mat-datepicker-toggle matSuffix [for]="fin"></mat-datepicker-toggle>
       <mat-datepicker #fin></mat-datepicker>
     </mat-form-field>
+    <p class="error_msg" *ngIf="fg_details.hasError('dates')">La fin d'une période doit être après son début.</p>
     <div class="end full">
       <mat-radio-group formControlName="statutVersement" class="large" (change)=onChangeStatus()>
         <mat-radio-button value="UNIQUE" color="primary">Versement unique</mat-radio-button>
@@ -120,6 +123,7 @@
       <mat-label>Montant de l'aide financière</mat-label>
       <input class="monetaire" matInput
       formControlName="montant"  type=number/>
+      <mat-error *ngIf="fg_details.get('montant').hasError('negative')">Doit être positif.</mat-error>
     </mat-form-field>
     <mat-form-field floatLabel="auto" class="medium">
       <input matInput placeholder="Organisme subventionnaire"
@@ -200,6 +204,7 @@
     <form [formGroup]="fg_ventilation">
       <p class="error_msg" *ngIf="fg_ventilation.hasError('incomplete')">Une ou plusieur lignes de ventilation sont incomplètes.</p>
       <p class="error_msg" *ngIf="fg_ventilation.hasError('total')">Le total de la ventilation ne corresponds pas au montant spécifié plus haut.</p>
+      <p class="error_msg" *ngIf="fg_ventilation.hasError('negative')">La ventilation contient des montants négatifs.</p>
     </form>
   </div>
 </div>
