--- a/client/src/app/templates/voyage-form/voyage-form.component.html
+++ b/client/src/app/templates/voyage-form/voyage-form.component.html
@@ -50,7 +50,7 @@
   </mat-form-field>
 
   <mat-form-field>
-      <input matInput type="text" placeholder="FAX"
+      <input matInput type="text" placeholder="FAX (Optionnel)"
       formControlName="fax">
   </mat-form-field>
   <br>
@@ -238,6 +238,7 @@
         <tr mat-footer-row *matFooterRowDef="['total','addRow']"></tr>
     </table>
     <p class="error_msg" *ngIf="fg_ventilation.hasError('incomplete')">Une ou plusieur lignes de ventilation sont incomplètes.</p>
+    <p class="error_msg" *ngIf="fg_ventilation.hasError('negative')">La ventilation contient des montants négatifs.</p>
 </div>
 
 <div id="avances">
