[dashB] WIP largeurs visuellement comme avant

--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -66,6 +66,7 @@
 .searchBarDate, .searchBarField, .searchBarFieldAuteur {
   display: inline-block;
   font-size: inherit;
+  width: 100%;
 }
 
 .searchBarFieldAuteur .mat-form-field-infix,
