Phone validation (WIP) #17

--- a/client/src/app/templates/demande-achat/demande-achat.component.html
+++ b/client/src/app/templates/demande-achat/demande-achat.component.html
@@ -70,8 +70,8 @@
           formControlName="nom">
         </mat-form-field>
         <mat-form-field>
-          <input matInput placeholder="No"
-          formControlName="numero">
+          <input matInput placeholder="Tél."
+          formControlName="telephone">
         </mat-form-field>
       </mat-grid-tile>
       <mat-grid-tile>
@@ -80,8 +80,8 @@
           formControlName="adresse">
         </mat-form-field>
         <mat-form-field>
-          <input matInput placeholder="No"
-          formControlName="numero2">
+          <input matInput placeholder="Fax"
+          formControlName="fax">
         </mat-form-field>
       </mat-grid-tile>
       <mat-grid-tile>
